[project]
name = "agentic-ai-with-langgraph-and-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.5.0",
    "langsmith>=0.4.3",
    "python-dotenv>=1.1.1",
]
